# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_path = "//foundation/ability/ability_runtime"
fuzz_test_output_path = "print_fwk/print_fwk"
c_utils_path = "//commonlibrary/c_utils"

print_path = "//base/print/print_fwk"
print_utils_path = "${print_path}/utils"
bsuni_binary_path = "//binary/artifacts/print/bsUniDriver/bsUniDriver"
bsuni_gsbin_path = "${bsuni_binary_path}/ghostscript/bin"
bsuni_gslib_path =
    "${bsuni_binary_path}/ghostscript/share/ghostscript/10.04.0/lib"
bsuni_gsres_path =
    "${bsuni_binary_path}/ghostscript/share/ghostscript/10.04.0/Resource"

bsuni_binary_install_path = "bin/uni_print_driver"
bsuni_gsbin_install_path = "${bsuni_binary_install_path}/ghostscript/bin"
bsuni_gslib_install_path =
    "${bsuni_binary_install_path}/ghostscript/share/ghostscript/10.04.0/lib"
bsuni_gsres_install_path = "${bsuni_binary_install_path}/ghostscript/share/ghostscript/10.04.0/Resource"

if (!defined(global_parts_info) ||
    defined(global_parts_info.security_security_guard)) {
  security_guard_enabled = true
} else {
  security_guard_enabled = false
}
cups_enable = true
debug_enable = false
ipp_over_usb_enable = false
sane_enable = true

declare_args() {
  print_fwk_feature_bsuni_driver = false
  print_fwk_feature_bsuni_ghostscript = false
}
