# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

group("scan_service") {
    deps = [ "//base/print/print_fwk/services/scan_service:scan_service" ]
}

group("sane_service") {
    deps = [ "//base/print/print_fwk/services/sane_service:sane_service" ]
}

if (print_fwk_feature_device_isolation) {
    group("print_service") {
        deps = [ "//base/print/print_fwk/services/print_service_phone:print_service" ]
    }
} else {
    group("print_service") {
        deps = [ "//base/print/print_fwk/services/print_service:print_service" ]
    }
}