# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

# 根据设备隔离标志确定测试路径
if (print_fwk_feature_device_isolation) {
  _test_base_paths = [
    "//base/print/print_fwk/test/phone_test/unittest:unittest",
    "//base/print/print_fwk/test/phone_test/fuzztest:fuzztest",
  ]
} else {
  _test_base_paths = [
    "//base/print/print_fwk/test/unittest:unittest",
    "//base/print/print_fwk/test/fuzztest:fuzztest",
  ]
}

# 添加所有对的子测试套
group("test") {
  testonly = true
  deps = _test_base_paths
}

